No longer need vertical align.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -696,7 +696,6 @@ a, img {
         padding: 10px 10px 0px 40px;
 
         .filename {
-            vertical-align: middle;
             font-family: @sansFontFamily;
             font-size: 13px;
             color: @bc-black;
